feat: implement interactive Pomodoro session with intensity, task prompt, timer, and session logging
Add CLI flag for intensity selection (low, medium, high)
Prompt user for intensity and task if not provided
Confirm session start before beginning timer
Map intensity to session duration (20/40/75 minutes)
Display live countdown and handle user keypresses ('r' for remaining time, Ctrl+C to exit)
Notify user and log session completion to Supabase
Improve user experience with clear prompts and feedback

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "author": "Max Carlquist",
   "bin": {
-    "promo": "./bin/run.js"
+    "promo": "bin/run.js"
   },
   "bugs": "https://github.com/MCarlquist/propomodoro/issues",
   "dependencies": {
@@ -65,7 +65,7 @@
     "topicSeparator": " ",
     "topics": {
       "hello": {
-        "description": "Say hello to the world and others"
+        "description": "A Pomodoro style Timer for developers"
       }
     },
     "update": {
@@ -81,7 +81,10 @@
       "s3": false
     }
   },
-  "repository": "MCarlquist/propomodoro",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MCarlquist/propomodoro.git"
+  },
   "scripts": {
     "build": "shx rm -rf dist && tsc -b",
     "lint": "eslint",
